# tree_models

./: .gitignore  GEMINI.md  Makefile  README.md  implementation_summary.md  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.sh
config/: CONFIG_README.md  __init__.py  base_config.py  config_demo.py  config_loader.py  config_schema.py
config/defaults/: lightgbm_default.yaml  production.yaml  xgboost_default.yaml
examples/: __init__.py  run_quick_example.py
notebooks/: complete_example.py  comprehensive_experiment.py  test.ipynb  train_xgb_baseline.py
notebooks/examples_output/data/: sample_dataset.csv
src/: PACKAGE_STRUCTURE_GUIDE.txt  __init__.py
src/data/: __init__.py  data_loader.py  data_preprocessor.py
src/models/: __init__.py  evaluator.py  explain.py  feature_selector.py  robustness.py  trainer.py  tuner.py
src/tracking/: mlflow_logger.py
src/utils/: __init__.py  io_utils.py  logger.py  plot_utils.py  timer.py
tests/: conftest.py  test_adapters.py  test_benchmarks.py  test_config.py  test_data.py  test_evaluator.py  test_integration.py  test_models.py  test_quick_example.py  test_trainer.py  test_trainer_reproducibility.py  test_utils.py  test_utils_logger.py  test_validator_sampling.py
tree_models/: __init__.py
tree_models/api/: README.md  __init__.py  info.py  quick_functions.py  workflows.py
tree_models/config/: __init__.py  data_config.py  loader.py  model_config.py
tree_models/data/: __init__.py  feature_engineer.py  preprocessor.py  validator.py
tree_models/explainability/: __init__.py  base.py  partial_dependence.py  reason_codes.py  scorecard.py  shap_explainer.py
tree_models/models/: __init__.py  base.py  evaluator.py  feature_selector.py  robustness.py  trainer.py  tuner.py
tree_models/models/adapters/: base.py  catboost_adapter.py  factory.py  lightgbm_adapter.py  xgboost_adapter.py
tree_models/models/base/: __init__.py  evaluator.py  protocols.py  selector.py  tester.py  trainer.py  tuner.py
tree_models/models/factory/: __init__.py  model_factory.py
tree_models/models/registry/: __init__.py  plugin_registry.py
tree_models/tracking/: __init__.py  mlflow_tracker.py
tree_models/utils/: __init__.py  error_handling.py  exceptions.py  logger.py  timer.py
