[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-models"
version = "2.0.0"
authors = [
    {name = "Tree Models Contributors", email = "contributors@tree-models.dev"},
]
description = "Production-ready tree-based machine learning with advanced features for data validation, preprocessing, feature engineering, model training, evaluation, and explainability."
readme = "README.md"
license = {text = "MIT"}
keywords = ["machine-learning", "xgboost", "lightgbm", "catboost", "tree-models", "mlops", "feature-engineering", "model-explainability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Data Scientists",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0", 
    "scikit-learn>=1.0.0,<2.0.0",
    "pydantic>=1.8.0,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    "scipy>=1.7.0,<2.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "typing-extensions>=4.0.0; python_version < '3.10'",
]

[project.urls]
Homepage = "https://github.com/aniketsharma21/tree-models"
Documentation = "https://tree-models.readthedocs.io"
Repository = "https://github.com/aniketsharma21/tree-models"
"Bug Tracker" = "https://github.com/aniketsharma21/tree-models/issues"
Changelog = "https://github.com/aniketsharma21/tree-models/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# Minimal installation - core functionality only
minimal = []

# Machine learning frameworks
ml = [
    "xgboost>=1.5.0,<3.0.0",
    "lightgbm>=3.2.0,<5.0.0",
    "catboost>=1.0.0,<2.0.0",
]

# MLOps and experiment tracking
mlops = [
    "mlflow>=1.20.0,<3.0.0",
]

# Model explainability
explainability = [
    "shap>=0.40.0,<1.0.0",
]

# Interactive visualization
viz = [
    "plotly>=5.0.0,<6.0.0",
]

# Text processing
text = [
    "nltk>=3.7,<4.0.0",
]

# Development dependencies
dev = [
    "black>=22.0.0,<25.0.0",
    "isort>=5.10.0,<6.0.0",
    "flake8>=5.0.0,<8.0.0",
    "mypy>=0.950,<2.0.0",
    "pre-commit>=2.17.0,<4.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.0.0,<4.0.0",
]

# Testing dependencies
test = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-xdist>=2.5.0,<4.0.0",
    "pytest-mock>=3.6.0,<4.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "factory-boy>=3.2.0,<4.0.0",
    "memory-profiler>=0.60.0,<1.0.0",
    "psutil>=5.8.0,<7.0.0",
]

# Documentation dependencies
docs = [
    "sphinx>=4.5.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.0,<3.0.0",
    "nbsphinx>=0.8.0,<1.0.0",
]

# Jupyter notebook support
jupyter = [
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.0.0,<7.0.0",
    "ipywidgets>=7.6.0,<9.0.0",
]

# Utilities
utils = [
    "click>=8.0.0,<9.0.0",
    "rich>=12.0.0,<14.0.0",
    "tqdm>=4.60.0,<5.0.0",
]

# File format support
formats = [
    "openpyxl>=3.0.0,<4.0.0",
    "fastparquet>=0.8.0,<2.0.0",
    "pyarrow>=8.0.0,<16.0.0",
]

# All optional dependencies (everything except minimal)
all = [
    "tree-models[ml,mlops,explainability,viz,text,utils,formats,jupyter]",
]

[project.entry-points."console_scripts"]
tree-models = "tree_models.cli:main"

[tool.setuptools]
packages = ["tree_models", "tree_models.api", "tree_models.models", "tree_models.explainability", "tree_models.data", "tree_models.config", "tree_models.tracking", "tree_models.utils"]

[tool.setuptools.package-data]
tree_models = ["py.typed", "*.yaml", "*.json"]

# Black configuration
[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "shap.*",
    "mlflow.*",
    "plotly.*",
    "nltk.*",
    "memory_profiler.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=tree_models",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=30",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks", 
    "requires_ml_libs: marks tests that require ML libraries (xgboost, lightgbm, etc.)",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::coverage.exceptions.CoverageWarning",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["tree_models"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError", 
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

# Flake8 configuration (in setup.cfg format as flake8 doesn't support pyproject.toml yet)
[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".eggs",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",  # ignore unused imports in __init__.py
    "tests/*:S101",     # ignore assert usage in tests
]

# Ruff configuration (modern alternative to flake8)
[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101"]

# Semantic versioning and changelog
[tool.bumpversion]
current_version = "2.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "tree_models/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"